# domain_rand

./: .gitignore  CLAUDE.md  MUJOCO_LOG.TXT  README.md  collect_demos.py  pyproject.toml  requirements.txt  single_align_task.py  single_obj_visual_world.py
assets/: A-200MAOPI.stl
assets/scenes/: example_factory.xml  single_part_align copy.xml  table_with_stl.xml
configs/: default.yaml  demo_base.yaml  single_obj_visual_world.yaml  single_part_align.yaml  table_stl.yaml
configs/presets/: full_dr.yaml  heavy_visual_dr.yaml  light_dr.yaml
scripts/: collect_demos.py  generate_dataset.py  verify_dataset.py  visualize_dataset.py
src/domain_rand/: __init__.py
src/domain_rand/core/: config.py  distributions.py  scene.py
src/domain_rand/pipeline/: collector.py  demo_collector.py  il_recorder.py  metadata.py  recorder.py
src/domain_rand/pipeline/recorders/: __init__.py  base.py  robomimic.py  simple.py
src/domain_rand/policy/: __init__.py  base.py  keyboard_teleop.py  scripted_align.py
src/domain_rand/randomizers/: base.py  camera.py  lighting.py  placement.py  texture.py
src/domain_rand/tasks/: __init__.py  base.py
src/domain_rand/utils/: rendering.py
tests/: test_distributions.py
