[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-rand"
version = "0.1.0"
description = "MuJoCo Domain Randomization Dataset Generator"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Domain Rand Team" }]

dependencies = [
    "mujoco>=3.2.5",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "h5py>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "opencv-python>=4.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
